get image file file system

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/stottle-uk/stottle-facial-recognition#readme",
   "dependencies": {
+    "fs-extra": "^4.0.2",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5"
   }
